@@ -1,3 +1,4 @@
+import org.gradle.api.internal.plugins.PluginApplicationException
 /*
  * This file was generated by the Gradle 'init' task.
  *
@@ -8,66 +9,75 @@
 buildscript {
 	repositories {
 		gradlePluginPortal()
-	}
-	dependencies {
-		classpath 'com.github.johnrengelman:shadow:8.1.1'
+		mavenCentral()
 	}
 }
 
-apply plugin: 'com.github.johnrengelman.shadow'
-apply plugin: 'java'
-apply plugin: 'application'
-apply plugin: 'eclipse'
 
-
-eclipse {
-    classpath {
-        file {
-            whenMerged { classpath ->
-                classpath.entries.findAll { entry -> entry.kind == 'lib' }*.exported = true
-            }
-        }
-    }
-
-    jdt {
-        sourceCompatibility = JavaVersion.VERSION_17
-        targetCompatibility = JavaVersion.VERSION_17
-        javaRuntimeName = "JavaSE-17"
-    }
+plugins {
+	id 'java'
+	id 'application'
+	id 'eclipse'
+	id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
+	
+}
+allprojects {
+	repositories {
+		mavenCentral()
+		gradlePluginPortal()
+	}
+	afterEvaluate {
+		if (project == rootProject) {
+			sourceCompatibility = JavaVersion.VERSION_17
+			targetCompatibility = JavaVersion.VERSION_17
+		} else {
+			sourceCompatibility = JavaVersion.VERSION_1_8
+			targetCompatibility = JavaVersion.VERSION_1_8
+		}
+	}
 }
 
-eclipse.jdt.file.withProperties { properties ->
-    properties.setProperty('org.eclipse.jdt.core.compiler.problem.forbiddenReference', 'ignore')
-    // Add the --add-opens argument to the VM arguments
-    def vmArgs = properties.getProperty('org.eclipse.jdt.launching.VM_ARGUMENTS', '')
-    vmArgs += ' --add-opens java.base/java.io=ALL-UNNAMED'
-    properties.setProperty('org.eclipse.jdt.launching.VM_ARGUMENTS', vmArgs.trim())
+subprojects { subproject ->
+	subproject.afterEvaluate {
+		if (subproject.plugins.hasPlugin('com.github.johnrengelman.shadow')) {
+			subproject.tasks.matching { it.name == 'shadowJar' }.all {
+				it.enabled = false
+			}
+		}
+	}
 }
 
-tasks.eclipse.dependsOn(cleanEclipse)
+// Only apply to the root project
+if (project == rootProject) {
+	apply plugin: 'com.github.johnrengelman.shadow'
+}
+
+
 
 repositories {
 	// Use Maven Central for resolving dependencies.
 	mavenCentral()
 }
 
+
 dependencies {
+	implementation project(':BowlerStudio')
+	implementation project(':BowlerStudio:libraries:bowler-script-kernel:java-bowler')
+	implementation project(':BowlerStudio:libraries:bowler-script-kernel')
+	implementation project(':BowlerStudio:libraries:dockfx')
+	implementation project(':BowlerStudio:libraries:bowler-script-kernel:GithubPasswordManager:GithubPasswordManager')
+	
+	
 	// Use JUnit Jupiter for testing.
 	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
 
 	// This dependency is used internally, and not exposed to consumers on their own compile classpath.
 	implementation 'com.google.guava:guava:31.1-jre'
 	implementation 'com.google.code.gson:gson:2.8.6'
-	implementation fileTree (dir: 'bowler', includes: ['BowlerStudio.jar'])
-	
+
+		
 }
 
-// Apply a specific Java toolchain to ease working on different environments.
-java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(17)
-	}
-}
 
 tasks.named('test') {
 	// Use JUnit Platform for unit tests.
@@ -76,14 +86,6 @@ tasks.named('test') {
 application {
 	// Define the main class for the application.
 	mainClass = 'com.commonwealthrobotics.Main'
-}
-
-tasks.withType(JavaExec) {
-	jvmArgs += ["--add-opens", "java.base/java.io=ALL-UNNAMED"]
-}
-
-test {
-	jvmArgs += ["--add-opens", "java.base/java.io=ALL-UNNAMED"]
 }
 
 shadowJar {
@@ -96,7 +98,6 @@ jar {
 	manifest {
 		attributes 'Implementation-Title': 'CaDoodle-Application',
 		'Implementation-Version': '0.0.1',
-		'Main-Class': 'com.commonwealthrobotics.Main',
-		'Add-Opens': 'java.base/java.io=ALL-UNNAMED'
+		'Main-Class': 'com.commonwealthrobotics.Main'
 	}
 }
